[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ossflow-service-kit"
version = "0.1.0"
description = "Kit FastAPI compartido para los servicios OSSFlow"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sse-starlette>=2.0",
    "pydantic>=2.5",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

# Layout plano: el directorio ES el paquete. Mapeamos el nombre
# ossflow_service_kit a "." para que setuptools no salga del project root.
[tool.setuptools]
packages = [
    "ossflow_service_kit",
    "ossflow_service_kit.db",
    "ossflow_service_kit.db.migrations",
    "ossflow_service_kit.db.migrations.versions",
]

[tool.setuptools.package-dir]
ossflow_service_kit = "."
"ossflow_service_kit.db" = "db"
"ossflow_service_kit.db.migrations" = "db/migrations"
"ossflow_service_kit.db.migrations.versions" = "db/migrations/versions"
